tests/out/error/call/unknown_fun.in.bt
struct Foo{}
f := Foo{}

a := not_exists()
b := f.bad_method()
