tests/out/error/call/unknown_fun.out
tests/out/error/call/unknown_fun.in.bt:4:16 error: unknown function not_exists
tests/out/error/call/unknown_fun.in.bt:5:18 error: method bad_method not found on type Foo
